--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -282,14 +282,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity
             android:name=".naruto"
             android:label="Naruto" >
-
-            
+         
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
         <activity
            android:name=".derp_avengers"
            android:label="DerpFest - Avengers" >
@@ -299,5 +298,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".got"
+            android:label="JayRod - Game of Thrones" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
