--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -282,6 +282,17 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <activity
             android:name=".naruto"
             android:label="Naruto" >
+
+            
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+           android:name=".derp_avengers"
+           android:label="DerpFest - Avengers" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
