--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -303,7 +303,15 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
             android:label="JayRod - Game of Thrones" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
+        <activity
+            android:name=".du_crot"
+            android:label="Dirty Unicorns" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
